--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -12,6 +12,30 @@ img {
   font-weight: 900;
 }
 
+.title-box {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 32px;
+}
+
+.content-box {
+  display: flex;
+  justify-content: center;
+  gap: 52px;
+  flex-wrap: wrap;
+}
+
+.item-box {
+max-width: 200px;
+display: flex;
+flex-direction: column;
+align-items: center;
+}
+
+.text {
+  text-align: center;
+}
+
 /* do not edit this footer */
 .footer {
   position: fixed;
